Startup Crash in [@ nsDBFolderInfo::GetTransferInfo]
Categories
(MailNews Core :: Database, defect, P2)
Tracking
(thunderbird_esr102+ verified, thunderbird108 wontfix, thunderbird109+ verified)
People
(Reporter: wsmwk, Assigned: mkmelin)
References
(Regression)
Details
(Keywords: crash, regression, topcrash-thunderbird)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr102+
|
Details | Review |
topcrash for 102.6.0. Ideally we should try to get a fix into the next beta, and uplift to 102 as soon as possible.
Crash first occurs in 108.0b2, which may make this a regression of Bug 1787609 - getMsgHdrForMsgId() may cause massive loss of MSF files since it potentially opens all folders in the profile hitting the limit of open files
Crash report: https://crash-stats.mozilla.org/report/index/0a3a2dfd-577f-46c0-baae-3e5990221216
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll nsDBFolderInfo::GetTransferInfo mailnews/db/msgdb/src/nsDBFolderInfo.cpp:712
1 xul.dll nsMsgLocalMailFolder::GetDatabaseWithReparse mailnews/local/src/nsLocalMailFolder.cpp:288
2 xul.dll nsMsgLocalMailFolder::UpdateFolder mailnews/local/src/nsLocalMailFolder.cpp:366
3 xul.dll NS_InvokeByIndex
4 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1125
5 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:963
6 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:507
7 xul.dll Interpret js/src/vm/Interpreter.cpp:3314
8 xul.dll js::RunScript js/src/vm/Interpreter.cpp:389
9 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:539
| Assignee | ||
Comment 1•3 years ago
|
||
https://hg.mozilla.org/releases/comm-esr102/file/tip/mailnews/db/msgdb/src/nsDBFolderInfo.cpp#l712
Probably we should upgrade the assertion on the previous line to a hard failure.
Updated•3 years ago
|
We agree with Magnus, but there is more need for improvement:
https://github.com/Betterbird/thunderbird-patches/blob/main/102/bugs/1806078-crash-GetTransferInfo.patch
| Assignee | ||
Comment 3•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/cb6a001e52d7
Fix startup Crash in [@ nsDBFolderInfo::GetTransferInfo]. r=benc
| Reporter | ||
Comment 5•3 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #0)
topcrash for 102.6.0. Ideally we should try to get a fix into the next beta, and uplift to 102 as soon as possible.
Now #5 for 102, but much less severe for 109.0b1 at #55 - an odd disparity.
| Reporter | ||
Comment 6•3 years ago
|
||
Safe to uplift?
Unfortunately this missed beta 2. We'd want to get this into b3 in the new year, or earlier if the opportunity presents itself.
| Assignee | ||
Comment 7•3 years ago
|
||
Comment on attachment 9308860 [details]
Bug 1806078 - Fix sartup Crash in [@ nsDBFolderInfo::GetTransferInfo]. r=benc
[Approval Request Comment]
Regression caused by (bug #): ?
User impact if declined: cash fix
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): fairly safe
| Reporter | ||
Comment 8•3 years ago
|
||
Comment on attachment 9308860 [details]
Bug 1806078 - Fix sartup Crash in [@ nsDBFolderInfo::GetTransferInfo]. r=benc
[Triage Comment]
Approved for beta
Comment 9•3 years ago
|
||
| bugherder uplift | ||
Thunderbird 109.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/b87df5f8ff08
| Reporter | ||
Comment 10•3 years ago
|
||
Comment on attachment 9308860 [details]
Bug 1806078 - Fix sartup Crash in [@ nsDBFolderInfo::GetTransferInfo]. r=benc
[Triage Comment]
Approved for esr102 - but still baking on beta for two weeks ... until - 102.7.0
Comment 11•3 years ago
|
||
| bugherder uplift | ||
Thunderbird 102.7.0:
https://hg.mozilla.org/releases/comm-esr102/rev/e6bac03361cf
| Reporter | ||
Updated•3 years ago
|
| Reporter | ||
Comment 12•3 years ago
|
||
No crashes for 109.0b4, 110.0b1, 102.7.0 (with 5% of users on 102.7.0).
So this is a success. Thanks Magnus.
Description
•