Bug 1806078 - Fix startup Crash in [@ nsDBFolderInfo::GetTransferInfo]. r=benc

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/102/bugs/1806078-crash-GetTransferInfo.patch

Differential Revision: https://phabricator.services.mozilla.com/D164985

--HG--
extra : rebase_source : 1e221b58530577207068b2087ad0f3ba113f728d
extra : amend_source : 14065015a8a036b0b2311f6f0261a1acd178c15d